// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D4",
    ],
    "chordName": "Bm6",
    "dur": 960,
    "time": 0,
  },
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D4",
    ],
    "chordName": "Bm6",
    "dur": 480,
    "time": 960,
  },
  Object {
    "chord": Array [
      "C#3",
      "E3",
      "G#3",
      "B3",
    ],
    "chordName": "C#m7",
    "dur": 480,
    "time": 1440,
  },
  Object {
    "chord": Array [
      "C#3",
      "E3",
      "G#3",
      "B3",
    ],
    "chordName": "C#m7",
    "dur": 640,
    "time": 1920,
  },
  Object {
    "chord": Array [
      "C#3",
      "E3",
      "G#3",
      "B3",
    ],
    "chordName": "C#m7",
    "dur": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      "E3",
      "D4",
      "F#4",
      "C#5",
      "B3",
    ],
    "chordName": "E13",
    "dur": 480,
    "time": 2880,
  },
  Object {
    "chord": Array [
      "E3",
      "D4",
      "F#4",
      "C#5",
      "B3",
    ],
    "chordName": "E13",
    "dur": 480,
    "time": 3360,
  },
  Object {
    "chord": Array [
      "G#3",
      "D#4",
      "F4",
      "C4",
    ],
    "chordName": "G#6",
    "dur": 480,
    "time": 3840,
  },
  Object {
    "chord": Array [
      "G#3",
      "D#4",
      "F4",
      "C4",
    ],
    "chordName": "G#6",
    "dur": 960,
    "time": 4320,
  },
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D#4",
      "C#5",
    ],
    "chordName": "B13",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D#4",
      "C#5",
    ],
    "chordName": "B13",
    "dur": 480,
    "time": 5600,
  },
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D#4",
      "C#5",
    ],
    "chordName": "B13",
    "dur": 320,
    "time": 6080,
  },
  Object {
    "chord": Array [
      "B3",
      "F#4",
      "D#4",
      "C#5",
    ],
    "chordName": "B13",
    "dur": 320,
    "time": 6400,
  },
  Object {
    "chord": Array [
      "E3",
      "B3",
      "F#3",
    ],
    "chordName": "Esus2",
    "dur": 640,
    "time": 6720,
  },
  Object {
    "chord": Array [
      "E3",
      "B3",
      "F#3",
    ],
    "chordName": "Esus2",
    "dur": 320,
    "time": 7360,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      "B3",
      "D4",
      "F#4",
      "G#4",
    ],
    "chordName": "Bm6",
    "dur": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      "B3",
      "D4",
      "F#4",
      "G#4",
    ],
    "chordName": "Bm6",
    "dur": 240,
    "time": 240,
  },
  Object {
    "chord": Array [
      "B3",
      "D4",
      "F#4",
      "G#4",
    ],
    "chordName": "Bm6",
    "dur": 240,
    "time": 480,
  },
  Object {
    "chord": Array [
      "B3",
      "D4",
      "F#4",
      "G#4",
    ],
    "chordName": "Bm6",
    "dur": 720,
    "time": 720,
  },
  Object {
    "chord": Array [
      "C#3",
      "B3",
      "E3",
      "G#3",
    ],
    "chordName": "C#m7add9",
    "dur": 240,
    "time": 1440,
  },
  Object {
    "chord": Array [
      "C#3",
      "B3",
      "E3",
      "G#3",
    ],
    "chordName": "C#m7add9",
    "dur": 240,
    "time": 1680,
  },
  Object {
    "chord": Array [
      "C#3",
      "B3",
      "E3",
      "G#3",
    ],
    "chordName": "C#m7add9",
    "dur": 480,
    "time": 1920,
  },
  Object {
    "chord": Array [
      "C#3",
      "B3",
      "E3",
      "G#3",
    ],
    "chordName": "C#m7add9",
    "dur": 480,
    "time": 2400,
  },
  Object {
    "chord": Array [
      "E3",
      "D4",
      "G#3",
      "B3",
    ],
    "chordName": "E9",
    "dur": 240,
    "time": 2880,
  },
  Object {
    "chord": Array [
      "E3",
      "D4",
      "G#3",
      "B3",
    ],
    "chordName": "E9",
    "dur": 240,
    "time": 3120,
  },
  Object {
    "chord": Array [
      "E3",
      "D4",
      "G#3",
      "B3",
    ],
    "chordName": "E9",
    "dur": 480,
    "time": 3360,
  },
  Object {
    "chord": Array [
      "G#3",
      "F#4",
      "C4",
      "A#4",
    ],
    "chordName": "G#9",
    "dur": 240,
    "time": 3840,
  },
  Object {
    "chord": Array [
      "G#3",
      "F#4",
      "C4",
      "A#4",
    ],
    "chordName": "G#9",
    "dur": 240,
    "time": 4080,
  },
  Object {
    "chord": Array [
      "G#3",
      "F#4",
      "C4",
      "A#4",
    ],
    "chordName": "G#9",
    "dur": 480,
    "time": 4320,
  },
  Object {
    "chord": Array [
      "G#3",
      "F#4",
      "C4",
      "A#4",
    ],
    "chordName": "G#9",
    "dur": 480,
    "time": 4800,
  },
  Object {
    "chord": Array [
      "B3",
      "C#5",
      "A4",
      "E5",
      "F#4",
      "D#4",
    ],
    "chordName": "B11",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      "B3",
      "C#5",
      "A4",
      "E5",
      "F#4",
      "D#4",
    ],
    "chordName": "B11",
    "dur": 480,
    "time": 5600,
  },
  Object {
    "chord": Array [
      "B3",
      "C#5",
      "A4",
      "E5",
      "F#4",
      "D#4",
    ],
    "chordName": "B11",
    "dur": 320,
    "time": 6080,
  },
  Object {
    "chord": Array [
      "B3",
      "C#5",
      "A4",
      "E5",
      "F#4",
      "D#4",
    ],
    "chordName": "B11",
    "dur": 320,
    "time": 6400,
  },
  Object {
    "chord": Array [
      "E3",
      "B3",
      "G#3",
      "F#4",
    ],
    "chordName": "EM11",
    "dur": 240,
    "time": 6720,
  },
  Object {
    "chord": Array [
      "E3",
      "B3",
      "G#3",
      "F#4",
    ],
    "chordName": "EM11",
    "dur": 240,
    "time": 6960,
  },
  Object {
    "chord": Array [
      "E3",
      "B3",
      "G#3",
      "F#4",
    ],
    "chordName": "EM11",
    "dur": 480,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      "Bb2",
      "Bb3",
      "Eb3",
      "C4",
      "Gb3",
      "Gb4",
      "Eb4",
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      "Bb2",
      "Bb3",
      "Eb3",
      "C4",
      "Gb3",
      "Gb4",
      "Eb4",
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 320,
  },
  Object {
    "chord": Array [
      "Bb2",
      "Bb3",
      "Eb3",
      "C4",
      "Gb3",
      "Gb4",
      "Eb4",
    ],
    "chordName": "Ebm6",
    "dur": 320,
    "time": 640,
  },
  Object {
    "chord": Array [
      "Bb2",
      "Bb3",
      "Eb3",
      "C4",
      "Gb3",
      "Gb4",
      "Eb4",
    ],
    "chordName": "Ebm6",
    "dur": 480,
    "time": 960,
  },
  Object {
    "chord": Array [
      "Ab5",
      "Bb5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 1440,
  },
  Object {
    "chord": Array [
      "Ab5",
      "Bb5",
    ],
    "chordName": "Dbm6",
    "dur": 480,
    "time": 1760,
  },
  Object {
    "chord": Array [
      "Ab5",
      "Bb5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 2240,
  },
  Object {
    "chord": Array [
      "Ab5",
      "Bb5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 2560,
  },
  Object {
    "chord": Array [
      "E5",
      "Gb5",
    ],
    "chordName": "Bbdimadd6",
    "dur": 480,
    "time": 2880,
  },
  Object {
    "chord": Array [
      "E5",
      "Gb5",
    ],
    "chordName": "Bbdimadd6",
    "dur": 480,
    "time": 3360,
  },
  Object {
    "chord": Array [
      "Db5",
      "Bb5",
      "E5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 3840,
  },
  Object {
    "chord": Array [
      "Db5",
      "Bb5",
      "E5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 4160,
  },
  Object {
    "chord": Array [
      "Db5",
      "Bb5",
      "E5",
    ],
    "chordName": "Dbm6",
    "dur": 480,
    "time": 4480,
  },
  Object {
    "chord": Array [
      "Db5",
      "Bb5",
      "E5",
    ],
    "chordName": "Dbm6",
    "dur": 320,
    "time": 4960,
  },
  Object {
    "chord": Array [
      "E2",
      "G#2",
      "C#3",
      "G#3",
      "B2",
      "E3",
      "B3",
      "C#4",
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 5280,
  },
  Object {
    "chord": Array [
      "E2",
      "G#2",
      "C#3",
      "G#3",
      "B2",
      "E3",
      "B3",
      "C#4",
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 5600,
  },
  Object {
    "chord": Array [
      "E2",
      "G#2",
      "C#3",
      "G#3",
      "B2",
      "E3",
      "B3",
      "C#4",
    ],
    "chordName": "E6",
    "dur": 480,
    "time": 5920,
  },
  Object {
    "chord": Array [
      "E2",
      "G#2",
      "C#3",
      "G#3",
      "B2",
      "E3",
      "B3",
      "C#4",
    ],
    "chordName": "E6",
    "dur": 320,
    "time": 6400,
  },
  Object {
    "chord": Array [
      "A2",
      "C#4",
      "E3",
      "A3",
      "E4",
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 6720,
  },
  Object {
    "chord": Array [
      "A2",
      "C#4",
      "E3",
      "A3",
      "E4",
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 7040,
  },
  Object {
    "chord": Array [
      "A2",
      "C#4",
      "E3",
      "A3",
      "E4",
    ],
    "chordName": "A6",
    "dur": 320,
    "time": 7360,
  },
]
`;
